# split-peel

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
characters/: default.json  kmm.json
docs/: banny-1.3-modular-plan.md  hubs-board-blueprint.md  studio-development-pipeline.md
docs/tickets/: SP13-001-voice-manifest-boundary.md  SP13-002-studio-native-package-source.md  SP13-003-reaction-shot-plans.md  SP13-004-studio-asset-registry-extraction.md  SP13-005-fresh-document-composition.md
examples/: eng1-no-feed.json  final-whistle-eng1.json  opening-day.json  overlays.desk-and-logos.json  overlays.final-whistle-gantry.json  overlays.highlight-video.json  studio-pipeline.json
prompts/: final-whistle-season.txt
references/: banny-cli.md
src/split_peel/: __init__.py  asset_registry.py  audio.py  banny_cli.py  characters.py  cli.py  config.py  espn.py  feed.py  memory.py  motion.py  overlays.py  package.py  package_ids.py  performance_plan.py  pipeline.py  scriptwriter.py  voice_manifest.py  youtube.py  youtube_assets.py
tests/: test_asset_registry.py  test_audio.py  test_banny_cli.py  test_characters.py  test_cli.py  test_config.py  test_espn.py  test_feed.py  test_memory.py  test_overlays.py  test_package.py  test_pipeline.py  test_scriptwriter.py  test_voice_manifest.py  test_youtube.py  test_youtube_assets.py
