[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "split-peel"
version = "0.1.0"
description = "Generate Banny Studio football commentary episodes from Farcaster feeds."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "split-peel contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
split-peel = "split_peel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
